package civictech.domain

enum class ChangeType {
    Addition,
    Update,
    Removal
}
