package civictech.domain

enum class SourceType {
    Attitude,
    Element,
    Link
}
